# atdgen-example

./: .gitignore  Makefile  README.md  atdgenexample.opam  package.json
src/: jbuild  types.atd
test/: jbuild  test.ml
test/resources/: blocks.json
