opam-version: "1.2"
name: "atdgen-example"
version: "dev"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [
  ["jbuilder" "runtest" "-p" name "-j" jobs]
]
depends: [
  "atdgen" {>="1.12.0"}
  "base" {>="0.9.4"}
  "jbuilder" {build}
  "ocamlfind" {build}
  "stdio" {>="0.9.1"}
  "yojson" {>="1.4.0"}
]
